# deconz

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Info.plist  LICENSE.txt  README.md  build-macos-arm64-qt6.sh  build-macos-arm64.sh  build-macos.sh  build-openssl-macos.sh  de_logo.icns  sign-macos.sh
.github/workflows/: build_amd64.yml  build_arm64.yml  build_armhf.yml
build-mingw/: build-msys2-qt5.sh  build-msys2-qt6.sh  build-msys2.sh  build-openssl-win32.sh  get_qt.sh
build-mingw/nsis/: license.txt  release.nsi
build-mingw/nsis/images/: de_header_left_center.xcf
dockerfiles/: amd64  arm64  armhf
icons/: deconz.icns
lib/sqlite3/: CMakeLists.txt
linux/deCONZ/DEBIAN/: control  postinst  preinst
linux/deCONZ/etc/udev/rules.d/: 69-conbee.rules
linux/deCONZ/lib/systemd/system/: deconz-gui.service  deconz-init.service  deconz-update.service  deconz-wifi.service  deconz.service
linux/deCONZ/usr/share/applications/: deCONZ.desktop
linux/raspbian/DEBIAN/: control  control_buster
linux/ubuntu/DEBIAN/: control
src/: CMakeLists.txt  actor_vfs_model.cpp  actor_vfs_model.h  app.rc  config.h.in  db_json_nodes.cpp  db_json_nodes.h  db_nodes.cpp  db_nodes.h  debug_view.cpp  debug_view.h  debug_view.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  send_to_dialog.cpp  send_to_dialog.h  send_to_dialog.ui  source_route_info.cpp  source_route_info.h  source_route_info.ui  source_routing.cpp  source_routing.h  util_private.cpp  zm_about_dialog.cpp  zm_about_dialog.h  zm_about_dialog.ui  zm_app.cpp  zm_app.h  zm_attribute_info.cpp  zm_attribute_info.h  zm_attribute_info.ui  zm_binddropbox.cpp  zm_binddropbox.h  zm_binddropbox.ui  zm_cluster_info.cpp  zm_cluster_info.h  zm_cluster_info.ui  zm_command_info.cpp  (+63 more)
src/common/: platform.h  protocol.c  protocol.h  zm_protocol.c  zm_protocol.h
src/deconz/: crc8.c  crc8.h  net_descriptor.h  qhttprequest_compat_old.h  security_key.h  util_private.h
src/gui/: actor_vfs_view.cpp  actor_vfs_view.h  actor_vfs_view.ui  gnode_link_group.cpp  gnode_link_group.h  settings_proxy.cpp  settings_proxy.h  settings_proxy.ui  theme.cpp  theme.h
src/plugins/: CMakeLists.txt
src/zcl/: ddel.xml
